// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`sequence '' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence 'this' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`sequence 'that' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequence 'thisthat' conditional success tests AST to match snapshot 1`] = `
[
  "this",
  "that",
  undefined,
]
`;

exports[`sequence 'thisthatfoo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 9,
    "index": 8,
    "line": 1,
  },
}
`;

exports[`sequence 'foo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
